<resources>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">宏信龙门店考核系统</string>
    <string name="title_activity_item">查看考评明细</string>
    <string name="title_activity_message">通知公告</string>
    <string name="title_activity_message_detail">通知详细</string>
    <string name="title_activity_score_choose">请打分</string>
    <string name="error_choose_category_please">请选择有效分类</string>
    <string name="error_choose_brand_please">请选择有效商户</string>
    <string name="product_add_shopcar_label">加入购物车</string>
    <string name="product_add_favorite_label">加入收藏夹</string>
    <string name="product_comment_label">用户评价</string>
    <string name="product_description_label">商品介绍</string>
    <string name="product_send_time_label">送达时间：</string>
    <string name="other_images_label">其它图片</string>
    <string name="list_button_more">更多</string>
    <string name="sort_button_default">商品默认排序</string>
    <string name="sort_button_price_desc">价格从高到低</string>
    <string name="sort_button_price_asc">价格从低到高</string>
    <string name="msg_product_not_selected">您还没选择商品呢</string>
    <string name="msg_please_input_keyword">请输入商品名称</string>
    <string name="msg_logoff_not_login">当前还没登录呢</string>
    <string name="msg_logoff_success">注销成功</string>
    <string name="msg_no_data">没有数据</string>
    <string name="user_name">用户名：</string>
    <string name="verification_code">验证码：</string>
    <string name="user_password">密    码：</string>
    <string name="login_failed_title">登录失败</string>
    <string name="login_failed_message">登录失败：用户名或密码错误</string>
    <string name="login_user_name_error_hint">请输入用户名</string>
    <string name="login_user_password_hint">请输入密码</string>
    <string name="login_user_verification_hint">请输入验证码</string>
    <string name="user_name_hint">请输入用户名，长度在4-20个字之间,由中文，字母，数字，\"_\"，\"-\"组成</string>
    <string name="user_password_hint">请输入密码，长度在6-20个字之间，由字母，数字，\"_\"，\"-\"组成</string>
    <string name="remember_user">  自动登录</string>
    <string name="loading">加载中...</string>
    <string name="personal_click_for_login">登  录</string>
    <string name="personal_for_welcome">欢迎来到XX商城</string>
    <string name="loading_error_again">重新加载</string>
    <string name="loading_error_tips_1">这位客官，网络不给力啊。</string>
    <string name="loading_error_tips_2">请检查一下您的网络，重新加载吧！</string>
    <string name="tab_home">首页</string>
    <string name="tab_category">品类</string>
    <string name="tab_mark">品牌</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_my">我的</string>
    <string name="app_name">商城</string>
    <string name="reciver_name">收货人:</string>
    <string name="reciver_tel">电话:</string>
    <string name="reciver_add">地址:</string>
    <string name="reciver_code">邮编:</string>
    <string name="person_menu_query_order">订单查询</string>
    <string name="person_menu_account">帐户管理</string>
    <string name="person_menu_about">关于</string>
    <string name="person_menu_logoff">注销</string>
    <string name="person_menu_exit">退出</string>
    <string name="title_activity_guide">向导画面</string>
    <string name="action_settings">设置</string>
    <string name="homeActivity_autoComplete">搜索商品</string>
    <string name="loading_error_tips_home">请检查您的手机是否已联网～</string>
    <string name="image_desc_common">image desc</string>
    <string name="group_copyright">Copyright © 2004 Adobe Systems Incorporated. All rights reserved</string>
    <string name="tag_for_logging">brains-smart</string>
    <string name="rdb_physical_name">brains_smart_db</string>
    <string name="google_map_api_key">GoogleMap API Key TODO </string>
	<string name="userLoginId">帐号：</string>
	<string name="password">密码：</string>
	<string name="input_username">请输入用户名</string>
	<string name="input_password">请输入密码</string>
    <string name="login">登录</string>
	<string name="do_score">打&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;分</string>
    <string name="query_kp_detail">查看考评明细</string>
    <string name="tongzhi">通&#160;&#160;&#160;知&#160;&#160;&#160;公&#160;&#160;&#160;告</string>
    <string name="fgx">分隔线</string>
    <string name="choose_store">选择店铺</string>
    <string name="read_y">已读</string>
    <string name="read_n">未读</string>
    <string name="msg_list">通知公告列表</string>
    <string name="back">返回</string>
    <string name="kpdf">考评打分</string>
    <string name="kpitemlist">考评明细列表</string>
    <string name="isextends_arrow">是否展开箭头标识</string>
    <string name="submit">提交</string>
    <string name="dfxx">打分选项</string>
	<string name="hint_shop_input">店名查询</string>
    <string name="omenu_exit">退出</string>
    <string name="omenu_logout">注销</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_search">查询</string>
    <string name="page_title_order">订单</string>
    <string name="upomp_bypay_sessionhint">由于您过长时间未操作，此次交易已失效，请退出支付，并重新进行交易。是否立即退出支付？</string>
    <string name="upomp_bypay_error">错误</string>
    <string name="upomp_bypay_linkerror">网络连接错误，请重新尝试！</string>
    <string name="upomp_bypay_fileerror">系统检测到您的手机POS已被恶意修改，为确保您的支付安全，请重新安装使用！</string>
    <string name="upomp_bypay_please">"请过 "</string>
    <string name="upomp_bypay_sendMac">" 秒后再发送验证码!"</string>
    <string name="upomp_bypay_get">获取</string>
    <string name="upomp_bypay_debitcard">借记卡</string>
    <string name="upomp_bypay_creditcard">信用卡</string>
    <string name="upomp_bypay_sixtotwenty">6~20位字符组合</string>
    <string name="upomp_bypay_sixtotwelve">6~12位字符组合</string>
    <string name="upomp_bypay_twotosixteen">2~16位字符组合</string>
    <string name="upomp_bypay_firstmobilenum">手 机 号 码 :</string>
    <string name="upomp_bypay_secondmobilenum">手机号码</string>
    <string name="upomp_bypay_thirdmobilenum">手机号码:</string>
    <string name="upomp_bypay_loading">登录</string>
    <string name="upomp_bypay_register">注册</string>
    <string name="upomp_bypay_username">"用   户   名  :"</string>
    <string name="upomp_bypay_firstshortmessagesecuritycode">短信验证码:</string>
    <string name="upomp_bypay_secondshortmessagesecuritycode">6位短信验证码</string>
    <string name="upomp_bypay_selectcard">选 择 卡 种 :</string>
    <string name="upomp_bypay_firstcardid">银行卡卡号:</string>
    <string name="upomp_bypay_secondcardid">银行卡卡号</string>
    <string name="upomp_bypay_firstcardpsw">银行卡密码:</string>
    <string name="upomp_bypay_secondcardpsw">银行卡密码</string>
    <string name="upomp_bypay_welcome">页面欢迎语:</string>
    <string name="upomp_bypay_hint">若与您预设的资料不符，极有可能是钓鱼软件，请终止操作。</string>
    <string name="upomp_bypay_editpass">修改密码</string>
    <string name="upomp_bypay_editinfo">更改手机号码</string>
    <string name="upomp_bypay_addcard">添加银行卡</string>
    <string name="upomp_bypay_selectdate">请选择有效期。</string>
    <string name="upomp_bypay_date">"有   效   期  :"</string>
    <string name="upomp_bypay_securityissue">安 全 问 题 :</string>
    <string name="upomp_bypay_securityquestionanswer">问 题 答 案 :</string>
    <string name="upomp_bypay_checkcode">"校   验   码  :"</string>
    <string name="upomp_bypay_payamount">支 付 金 额 :</string>
    <string name="upomp_bypay_backnum">信用卡背面末三位数字</string>
    <string name="upomp_bypay_affirm">确认</string>
    <string name="upomp_bypay_return">返回</string>
    <string name="upomp_bypay_failcause">失败原因:</string>
    <string name="upomp_bypay_cardmanage">银行卡管理</string>
    <string name="upomp_bypay_gantan">！</string>
    <string name="upomp_bypay_next">下一步</string>
    <string name="upomp_bypay_cancel">取消</string>
    <string name="upomp_bypay_getpass">忘记密码</string>
    <string name="upomp_bypay_cardtype">" 卡 类 型 :"</string>
    <string name="upomp_bypay_returnlist">返回列表</string>
    <string name="upomp_bypay_cardunknown">未知卡</string>
    <string name="upomp_bypay_removecard">解除关联</string>
    <string name="upomp_bypay_affirmremovecard">确认要解除关联本银行卡？[</string>
    <string name="upomp_bypay_changedefultcard">默认卡变更</string>
    <string name="upomp_bypay_affirmchangedefultcard">是否设置本卡为默认卡？[</string>
    <string name="upomp_bypay_prompt">提示</string>
    <string name="upomp_bypay_selectsucceed">设置成功！</string>
    <string name="upomp_bypay_selectfail">设置失败，请重新尝试！</string>
    <string name="upomp_bypay_updatelist">更新列表</string>
    <string name="upomp_bypay_balance">余额查询</string>
    <string name="upomp_bypay_changepswsucceed">修改密码成功!</string>
    <string name="upomp_bypay_newpsw">"新   密   码  :"</string>
    <string name="upomp_bypay_enternewpsw">确认新密码:</string>
    <string name="upomp_bypay_logined">已登录</string>
    <string name="upomp_bypay_payfail">支付失败</string>
    <string name="upomp_bypay_yuan">" 元"</string>
    <string name="upomp_bypay_accountmainactivity_header">我的信息</string>
    <string name="upomp_bypay_accountmain_myinfo">个人信息</string>
    <string name="upomp_bypay_accountmain_username">" 用 户 名 :"</string>
    <string name="upomp_bypay_accountmain_email">邮箱地址:</string>
    <string name="upomp_bypay_addcard_binduser">绑 定 用 户 :</string>
    <string name="upomp_bypay_addcard_cvn2">C V N 2 :</string>
    <string name="upomp_bypay_addcard_selectdefultcard">设置成默认银行卡</string>
    <string name="upomp_bypay_balanceresult_balance">余额查询结果</string>
    <string name="upomp_bypay_balanceresult_balancesucceed">余额查询成功！</string>
    <string name="upomp_bypay_balanceresult_balancefail">余额查询失败！</string>
    <string name="upomp_bypay_balanceresult_balancenumber">您的银行卡余额是</string>
    <string name="upomp_bypay_balanceresult_yuan">元。</string>
    <string name="upomp_bypay_bankrestlt_succeed">添加银行卡成功！</string>
    <string name="upomp_bypay_bankrestlt_fail">添加银行卡失败！</string>
    <string name="upomp_bypay_bankrestlt_cardid">"  卡    号  :"</string>
    <string name="upomp_bypay_bankrestlt_continuebank">继续绑卡</string>
    <string name="upomp_bypay_cardinfo_hint1">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联、余额查询。"</string>
    <string name="upomp_bypay_cardinfo_hint2">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联。"</string>
    <string name="upomp_bypay_cardinfo_removecardsucceed">银行卡解除关联成功!</string>
    <string name="upomp_bypay_cardinfo">银行卡信息</string>
    <string name="upomp_bypay_cardinfo_issuercard">发卡银行:</string>
    <string name="upomp_bypay_cardinfo_cardid">"  卡   号   :"</string>
    <string name="upomp_bypay_cardmainactivity_firstlogin">您尚未登录，请先登录再进行银行卡管理操作。</string>
    <string name="upomp_bypay_cardmainactivity_defultcard">(默认卡)</string>
    <string name="upomp_bypay_cardmainactivity_cancelbanksucced">取消绑定成功!</string>
    <string name="upomp_bypay_cardmainactivity_issuedcard">"发卡行: "</string>
    <string name="upomp_bypay_cardmainactivity_close">关闭</string>
    <string name="upomp_bypay_cardmain_relevancecard">你已关联的银行卡:</string>
    <string name="upomp_bypay_cardmain_norelevancecard">你还没有关联的银行卡！</string>
    <string name="upomp_bypay_cardmain_hint1">"        请点击添加银行卡按钮添加银行卡！"</string>
    <string name="upomp_bypay_cardmain_hint2">"        选择您绑定的银行卡后，您可以进行以下操作：查看银行卡信息；默认卡设置；银行卡删除；余额查询！"</string>
    <string name="upomp_bypay_editinfoactivity_nochange">新手机号码与原手机号码一样，无需进行修改。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum">请输入原手机号码。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum1">原手机号码格式有误，应为11位数字。</string>
    <string name="upomp_bypay_editinfoactivity_changetelfail">更改手机号码失败！</string>
    <string name="upomp_bypay_editinfoactivity_changetelsucceed">更改手机号码成功！</string>
    <string name="upomp_bypay_editinfo_registertel">已注册手机:</string>
    <string name="upomp_bypay_editinfo_oldtel">原手机号码:</string>
    <string name="upomp_bypay_editinfo_oldtelhint">原手机号码</string>
    <string name="upomp_bypay_editinfo_newtel">新手机号码:</string>
    <string name="upomp_bypay_editinfo_newtelhint">新手机号码</string>
    <string name="search">搜索</string>
    <string name="order_bumber">订单号：</string>
    <string name="total_value">订单金额：</string>
    <string name="submit_time">下单时间：</string>
    <string name="order_status">订单状态：</string>
    <string name="none" />
</resources>