<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   	<android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

	<RadioGroup android:id="@+id/homeradio" 
	    android:gravity="center_vertical" android:layout_gravity="bottom" 
	    android:layout_width="fill_parent" android:layout_height="wrap_content" 
	    android:orientation="horizontal" android:background="@color/main_tab_bar_bg_color">
        	<RadioButton android:tag="radio_button_home" 
		        android:text="@string/tab_home" 
		        android:drawableTop="@drawable/main_bottom_tab_home_normal" style="@style/main_tab_button" />
            <RadioButton android:tag="radio_button_category" 
                android:text="@string/tab_category" 
                android:drawableTop="@drawable/main_bottom_tab_category_normal" style="@style/main_tab_button" />
            <RadioButton android:tag="radio_button_mark" 
                android:text="@string/tab_mark" 
                android:drawableTop="@drawable/main_bottom_tab_faxian_normal" style="@style/main_tab_button" />
            <RadioButton android:tag="radio_button_cart" 
                android:text="@string/tab_cart" 
                android:drawableTop="@drawable/main_bottom_tab_cart_normal" style="@style/main_tab_button" />
            <RadioButton android:tag="radio_button_my" 
                android:text="@string/tab_my" 
                android:drawableTop="@drawable/main_bottom_tab_personal_normal" style="@style/main_tab_button" />
    </RadioGroup>
</LinearLayout>