<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout android:orientation="vertical" 
        android:layout_height="fill_parent" android:layout_width="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" 
            android:layout_width="fill_parent" android:layout_height="0.0dip" 
            android:layout_weight="1.0"/>
		<TabWidget android:id="@android:id/tabs" 
		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
		    android:visibility="gone" android:layout_weight="0.0"/>
		<RadioGroup android:id="@+id/homeradio" 
		    android:gravity="center_vertical" android:layout_gravity="bottom" 
		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
		    android:orientation="horizontal" android:background="@drawable/custom_tabbar_bg">
		    <RadioButton android:tag="radio_button_home" 
		        android:text="@string/tab_home" 
		        android:drawableTop="@drawable/tab_home" style="@style/main_tab_bottom" />
            <RadioButton android:tag="radio_button_category" 
                android:text="@string/tab_category" 
                android:drawableTop="@drawable/tab_category" style="@style/main_tab_bottom" />
            <RadioButton android:tag="radio_button_mark" 
                android:text="@string/tab_mark" 
                android:drawableTop="@drawable/tab_mark" style="@style/main_tab_bottom" />
            <RadioButton android:tag="radio_button_cart" 
                android:text="@string/tab_cart" 
                android:drawableTop="@drawable/tab_cart" style="@style/main_tab_bottom" />
            <RadioButton android:tag="radio_button_my" 
                android:text="@string/tab_my" 
                android:drawableTop="@drawable/tab_my" style="@style/main_tab_bottom" />
		</RadioGroup>
    </LinearLayout>
</TabHost>
