<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:id="@+id/header" android:background="@color/title_bg_red" android:layout_width="fill_parent" android:layout_height="50.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<LinearLayout android:gravity="center_vertical" android:layout_gravity="right|center" android:orientation="horizontal" android:id="@+id/common_header_right_btn_area" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
       
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/shopping_cart_edit_icon" android:duplicateParentState="true" android:layout_width="18.0sp" android:layout_height="18.0sp" android:layout_marginRight="10.0dip" android:src="@drawable/shop_filter_bt" android:adjustViewBounds="true" android:contentDescription="@string/none" />
    
    </LinearLayout>
    
    	<RelativeLayout android:gravity="center" android:id="@+id/home_title_search" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="13.0dip" android:layout_centerVertical="true" android:layout_toLeftOf="@id/common_header_right_btn_area" >
            <ImageView android:id="@+id/iv_search" android:layout_width="wrap_content" android:contentDescription="@string/image_desc_common" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/icon_search" android:layout_centerVertical="true" />
            <TextView android:textSize="14.0dip" android:textColor="@color/search_font_dark_grey" android:gravity="center_vertical" android:id="@+id/homeActivity_autoComplete" android:background="@color/transparent" android:paddingRight="20.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="2.0dip" android:hint="@string/homeActivity_autoComplete" android:singleLine="true" android:completionThreshold="1" android:layout_toRightOf="@id/iv_search" android:layout_centerVertical="true" android:dropDownWidth="fill_parent" />
            <ImageView android:id="@+id/homeActivity_voice" android:background="@drawable/app_icon_voice" android:contentDescription="@string/image_desc_common"  android:layout_width="12.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>

</RelativeLayout>