<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@color/white" >
	<RelativeLayout android:id="@+id/header" android:layout_gravity="center_vertical" android:gravity="center_vertical"  android:background="@color/title_bg_red" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">
	    <Button android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/btn_search_btn" android:background="@color/transparent" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:src="@drawable/android_search_icon" android:text="@string/search" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/title_right_button" />
	    <RelativeLayout android:background="@color/white" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_toLeftOf="@id/btn_search_btn" android:layout_centerVertical="true">
            <ImageView android:id="@+id/search_title_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="13.0dip" android:src="@drawable/icon_search" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/none"/>
            <AutoCompleteTextView android:textSize="15.0sp" android:textColor="@color/search_title_text_color" android:textColorHint="@color/search_title_hint_text_color" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/homeActivity_autoComplete" android:background="@color/transparent" android:paddingRight="35.0dip" android:focusable="true"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:hint="@string/homeActivity_autoComplete" android:singleLine="true" android:completionThreshold="1" android:layout_toRightOf="@id/search_title_icon" android:layout_centerVertical="true" android:inputType="text" android:dropDownWidth="fill_parent" android:imeOptions="actionSearch"  />
            <ImageButton android:id="@+id/search_clean" android:background="@drawable/android_home_search_clean" android:visibility="gone" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_marginRight="8.0dip" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/none"/>
        </RelativeLayout>
        
    </RelativeLayout>
   <FrameLayout  android:layout_width="fill_parent"  android:layout_below="@id/header"  android:layout_height="fill_parent">
       <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
           <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal"
                android:padding="0dp" >
                <Button
                    android:id="@+id/search_price_dsc_button"
                    android:layout_width="fill_parent"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:scaleType="center"
                    android:text="@string/sort_button_price_desc"
                    android:textColor="#FFF"
                    android:textSize="13sp" />
                <Button
                    android:id="@+id/search_price_ase_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:scaleType="center"
                    android:text="@string/sort_button_price_asc"
                    android:textColor="#FFF"
                    android:textSize="13sp" />
            </LinearLayout>
			<ListView android:id="@+id/lv_result_list" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
       </LinearLayout>
       <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/rl_oading_area" android:visibility="gone">
                <ProgressBar
                    android:id="@+id/top_refresh_progressBar"
                    style="@android:style/Widget.ProgressBar.Small.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                   />
       </RelativeLayout>
   </FrameLayout>
</RelativeLayout>    
 