<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/order_list_item" android:background="@drawable/login_editor_layout_bg" android:layout_margin="5dip"  android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0dip" android:id="@+id/order_item_Text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/order_bumber" android:layout_alignParentTop="true" />
    <TextView android:textSize="12.0dip" android:id="@+id/order_item_Text"      android:textColor="#ff000000"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_toRightOf="@id/order_item_Text_hint" android:layout_alignParentTop="true" />
    
    <TextView android:textSize="12.0dip" android:id="@+id/order_item_price_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"  android:text="@string/total_value" android:layout_below="@id/order_item_Text" />
    <TextView android:textSize="12.0dip" android:id="@+id/order_item_totalPrice" android:textColor="@color/font_red"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_toRightOf="@id/order_item_price_hint" android:layout_below="@id/order_item_Text" />
    <TextView android:textSize="12.0dip" android:id="@+id/order_item_subtime_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="11.0dip" android:text="@string/submit_time" android:layout_below="@id/order_item_price_hint" />
    <TextView android:textSize="12.0dip" android:id="@+id/order_item_subtime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="11.0dip" android:text="false" android:layout_toRightOf="@id/order_item_subtime_hint" android:layout_below="@id/order_item_price_hint" />
    <View android:saveEnabled="false"    android:id="@+id/line_up" android:layout_below="@id/order_item_subtime" style="@style/line1" />
    <RelativeLayout android:id="@+id/product_gallery_order_layout" android:focusable="false" android:clickable="false" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" android:layout_below="@id/line_up">
        <Gallery android:gravity="left" android:id="@+id/product_gallery_order" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="10.0dip" android:spacing="10.0dip" android:layout_alignParentLeft="true" android:unselectedAlpha="1.0" />
        <ImageView android:gravity="left" android:id="@+id/product_list_item_image" android:padding="5.0dip" android:layout_width="76.0dip" android:layout_height="76.0dip" android:layout_marginLeft="5.0dip" android:scaleType="fitCenter" android:layout_centerVertical="true" android:background="@drawable/shopping_cart_product_icon_bg"/>
        <ImageView android:gravity="center" android:id="@+id/list_index" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/android_list_idex" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textColor="#ff000000" android:id="@+id/order_product_item_name"  android:gravity="center_vertical"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_toLeftOf="@id/list_index" android:layout_toRightOf="@id/product_list_item_image" android:layout_alignTop="@id/product_list_item_image" android:layout_alignBottom="@id/product_list_item_image" />
    </RelativeLayout>
    <View     android:id="@+id/line_down" android:saveEnabled="false" android:layout_below="@id/product_gallery_order_layout" style="@style/line1" />
    <TextView android:id="@+id/order_status" android:textStyle="bold" android:textColor="@color/font_red" android:gravity="center"  android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/order_status" android:layout_below="@id/line_down" android:layout_centerVertical="true" />
    <TextView android:id="@+id/order_item_status" android:textColor="@color/font_red" android:ellipsize="none" android:gravity="center"  android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:layout_toRightOf="@id/order_status" android:layout_below="@id/line_down" android:layout_centerVertical="true" />
    
</RelativeLayout>